Adding reuired attribute to the input element and renderer.

--- a/templates/form-elements/default.twig
+++ b/templates/form-elements/default.twig
@@ -1,4 +1,4 @@
 {% from 'form-utils.twig' import utils %}
 {% set tagName = tagName ?: 'div' %}
-<{{ tagName }} {{ renderer.getAttributes|raw }}>{% block content %}{{ translate(element.value) }}{% endblock %}
+<{{ tagName }} {{ renderer.getAttributes|raw }}>{% block content %}{{ element.value|raw }}{% endblock %}
 </{{ tagName }}>
