--- a/templates/form-inputs/text.twig
+++ b/templates/form-inputs/text.twig
@@ -1,4 +1,4 @@
-<div class="form-group">
+<div class="form-group{{ element.isRequired ? ' required' }}">
     {{ element.label|raw }}
     {%- block input %}
 
