Adding validation process

--- a/tests/templates/index.twig
+++ b/tests/templates/index.twig
@@ -11,8 +11,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <style>
       .form-group.required .control-label:after {
-        content:"*";
-        color:red;
+        content:" *";
+        color: #b50e00;
       }
     </style>
 
