--- a/templates/form-inputs/text.twig
+++ b/templates/form-inputs/text.twig
@@ -1,8 +1,13 @@
-<div class="form-group{{ element.isRequired ? ' required' }}">
+<div class="form-group{{ element.isRequired ? ' required' }}{{ element.isValid ? '': ' has-error' }}">
     {{ element.label|raw }}
     {%- block input %}
 
     <input {{ renderer.getAttributes|raw }}>
     {%- endblock %}
+    {%- if not element.isValid -%}
+        {% for message in element.getValidationChain.getMessages %}
+            <span class="help-block">{{ translate(message) }}</span>
+        {% endfor %}
+    {%- endif -%}
 
 </div>
