Fixed tests for new validation process
Valid state on inputs is updated by running validate() method in the new validation process. Tests were made with setValue() updating $valid status causing tests to fail.

--- a/templates/form-inputs/text.twig
+++ b/templates/form-inputs/text.twig
@@ -8,6 +8,6 @@
         {% for message in element.getValidationChain.getMessages %}
             <span class="help-block">{{ translate(message) }}</span>
         {% endfor %}
-    {%- endif -%}
+    {%- endif %}
 
 </div>
