Added wasSubmitted method to form interface. Fixed the value for rendering file inputs after a submit. Form now checks if its submitted and at that time it will retrieve the data from request so that it can be validated, simplifying the submition/validation on forms.

--- a/tests/templates/form.twig
+++ b/tests/templates/form.twig
@@ -2,4 +2,10 @@
 
 {% block content %}
     {{ form|raw }}
+
+    {% if submitted %}
+        <h4>Submitted values</h4>
+        <hr>
+        {{ dump(form.getData) }}
+    {% endif %}
 {% endblock %}
