--- a/templates/form-elements/fieldset.twig
+++ b/templates/form-elements/fieldset.twig
@@ -2,7 +2,7 @@
 {% set tagName = 'fieldset' %}
 {% block content %}{% if element.value %}
 
-    <legend>{{ element.value }}</legend>
+    <legend>{{ translate(element.value) }}</legend>
 {% endif %}{% for item in element %}
     {{ item.render|raw }}
 {% endfor %}{% endblock %}
