--- a/templates/form-inputs/checkbox.twig
+++ b/templates/form-inputs/checkbox.twig
@@ -1,5 +1,6 @@
 <div class="checkbox">
+    <input id="_{{ element.name }}" name="{{ element.name }}" type="hidden" value="{{ element.value }}">
     <label {{ renderer.getLabelAttributes|raw }}>
-        <input {{ renderer.getAttributes|raw }}> {{ element.label.getValue }}
+        <input onchange="document.getElementById('_{{ element.name }}').value=(this.checked)?1:0;" {{ renderer.getAttributes|raw }}> {{ element.label.getValue }}
     </label>
 </div>
